Improved failled jdbc probes.